# angbao_robot

./: README.md
install/angbao_navigation2/share/angbao_navigation2/: converter.py  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/angbao_navigation2/share/angbao_navigation2/cmake/: ament_cmake_export_include_directories-extras.cmake  angbao_navigation2__rosidl_generator_cExport-noconfig.cmake  angbao_navigation2__rosidl_typesupport_cExport.cmake  angbao_navigation2__rosidl_typesupport_cppExport-noconfig.cmake  angbao_navigation2__rosidl_typesupport_introspection_cExport.cmake  angbao_navigation2__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/angbao_navigation2/share/angbao_navigation2/launch/: depthtoscan.launch  depthtoscan.launch.py  navigation.launch.py
install/angbao_navigation2/share/angbao_navigation2/maps/: 507map.pgm  507map.yaml  509map.pgm  509map.yaml  meeting_room.pgm  meeting_room.yaml
install/angbao_navigation2/share/angbao_navigation2/msg/: CustomDetection.idl  CustomDetection.msg
install/angbao_navigation2/share/angbao_navigation2/param/: angbao_params.yaml  angbao_params2.yaml  angbao_params_cam.yaml  angbao_params_true.yaml
install/angbao_navigation2/share/angbao_navigation2/src/: csrt_tracker.cpp  de_pointcloud.py  dynamic_final2.py  dynamic_final3.py  get_align.py  point_filter.py  tf2_test.py
install/angbao_navigation2/share/angbao_navigation2/src/test/: blue_dynamic.py  converter.py  converter2.py  dynamic_final.py  (+7 more)
(+61 files in other folders)
